cpp_runtime/libtorch_std_helper.h

// ============================================================
// 张量创建与转换
// ============================================================
void* torch_std_tensor_from_blob(void* data, int64_t* shape, int ndim, int dtype);
void* torch_std_tensor_from_blob_3d(void* data, int d0, int d1, int d2, int dtype);
void* torch_std_zeros(int64_t* shape, int ndim, int dtype);
void* torch_std_ones(int64_t* shape, int ndim, int dtype);
void* torch_std_empty(int64_t* shape, int ndim, int dtype);
void* torch_std_full(int64_t* shape, int ndim, double value, int dtype);
void* torch_std_randn(int64_t* shape, int ndim, int dtype);
void* torch_std_randint(int64_t low, int64_t high, int64_t* shape, int ndim, int dtype);
void* torch_std_clone(void* t);
void* torch_std_detach(void* t);
void* torch_std_to_dtype(void* t, int dtype);
void  torch_std_delete_tensor(void* t);
void* torch_std_arange(int64_t start, int64_t end, int64_t step, int dtype);
// 数据导出
int64_t torch_std_numel(void* t);
int     torch_std_ndim(void* t);
void    torch_std_shape(void* t, int64_t* out);
void    torch_std_to_double_array(void* t, double* out, int64_t n);
void    torch_std_to_float_array(void* t, float* out, int64_t n);
void    torch_std_to_int64_array(void* t, int64_t* out, int64_t n);
// ============================================================
// 数学运算
// ============================================================
void* torch_std_add(void* a, void* b);
void* torch_std_sub(void* a, void* b);
void* torch_std_mul(void* a, void* b);
void* torch_std_div(void* a, void* b);
void* torch_std_pow(void* a, double exp);
void* torch_std_exp(void* a);
void* torch_std_log(void* a);
void* torch_std_sqrt(void* a);
void* torch_std_neg(void* a);
void* torch_std_abs(void* a);
void* torch_std_cos(void* a);
void* torch_std_sin(void* a);
void* torch_std_mul_scalar(void* a, double s);
void* torch_std_add_scalar(void* a, double s);
 
// ============================================================
// 激活函数
// ============================================================
void* torch_std_relu(void* a);
void* torch_std_leaky_relu(void* a, double negative_slope);
void* torch_std_sigmoid(void* a);
void* torch_std_tanh(void* a);
void* torch_std_softmax(void* a, int64_t dim);
void* torch_std_log_softmax(void* a, int64_t dim);
// ============================================================
// 归约
// ============================================================
void* torch_std_sum(void* a);
void* torch_std_sum_dim(void* a, int64_t dim, int keepdim);
void* torch_std_mean(void* a);
void* torch_std_mean_dim(void* a, int64_t dim, int keepdim);
void* torch_std_max(void* a);
void* torch_std_max_dim(void* a, int64_t dim, int keepdim);
void* torch_std_min(void* a);
void* torch_std_min_dim(void* a, int64_t dim, int keepdim);
// ============================================================
// 索引与采样
// ============================================================
int64_t torch_std_argmax(void* a);
int64_t torch_std_argmax_dim1(void* a, int64_t dim);
void*   torch_std_multinomial(void* probs, int64_t num_samples, int replacement);
void*   torch_std_gather(void* input, int64_t dim, void* index);
void*   torch_std_index_select(void* input, int64_t dim, void* index);
void*   torch_std_index_tensor(void* input, void* index);
// ============================================================
// 形状操作
// ============================================================
void* torch_std_reshape(void* a, int64_t* shape, int ndim);
void* torch_std_transpose(void* a, int64_t dim0, int64_t dim1);
void* torch_std_permute(void* a, int64_t* dims, int ndim);
void* torch_std_squeeze(void* a, int64_t dim);
void* torch_std_unsqueeze(void* a, int64_t dim);
void* torch_std_cat(void** tensors, int n, int64_t dim);
void* torch_std_stack(void** tensors, int n, int64_t dim);
// ============================================================
// 矩阵与线性层
// ============================================================
void* torch_std_matmul(void* a, void* b);
void* torch_std_linear(void* input, void* weight, void* bias);
void* torch_std_conv1d(void* input, void* weight, void* bias,
                       int64_t stride, int64_t padding, int64_t dilation, int64_t groups);
void* torch_std_conv2d(void* input, void* weight, void* bias,
                       int64_t stride_h, int64_t stride_w,
                       int64_t padding_h, int64_t padding_w,
                       int64_t dilation_h, int64_t dilation_w,
                       int64_t groups);
void* torch_std_max_pool2d(void* input, int64_t kernel_h, int64_t kernel_w,
                           int64_t stride_h, int64_t stride_w,
                           int64_t padding_h, int64_t padding_w,
                           int64_t dilation_h, int64_t dilation_w);
void* torch_std_avg_pool2d(void* input, int64_t kernel_h, int64_t kernel_w,
                           int64_t stride_h, int64_t stride_w,
                           int64_t padding_h, int64_t padding_w);
void* torch_std_batch_norm2d(void* input, void* weight, void* bias,
                             void* running_mean, void* running_var,
                             int training, double momentum, double eps);
// ============================================================
// 工具
// ============================================================
void* torch_std_narrow(void* a, int64_t dim, int64_t start, int64_t length);
void* torch_std_slice(void* a, int64_t dim, int64_t start, int64_t end, int64_t step);
int64_t torch_std_size(void* a, int64_t dim);
// 注意力 (multi-head scaled dot-product, handles reshape/permute internally)
void* torch_std_attention(void* q, void* k, void* v, int64_t heads, void* mask, int skip_reshape);
// 随机种子
void torch_std_manual_seed(int64_t seed);
// 设备
int torch_std_cuda_is_available(void);
void* torch_std_to_cuda(void* t);
void* torch_std_to_cpu(void* t);
int torch_std_is_cuda(void* t);
// ============================================================
// TorchScript JIT 模型加载与推理
// ============================================================
void* torch_std_jit_load(const char* path);
// SD 1.5 UNet forward from safetensors dict (convenience wrapper)
// Extracts all needed weights by name internally.
void* torch_std_sd15_unet_forward_dict(
    void* safetensors_dict,
    void* input_ptr, void* timestep_ptr, void* text_emb_ptr,
    void** lora_A, void** lora_B,
    int* lora_target_indices, int n_lora,
    double lora_scale);
// ============================================================
// Image I/O
// ============================================================
void* torch_std_load_image(const char* path);
// ============================================================
// DDPM Scheduler
// ============================================================
void* torch_std_ddpm_betas(int T, double beta_start, double beta_end);
void* torch_std_ddpm_add_noise(void* latent, void* noise, void* timestep,
                                void* alphas_cumprod);
// ============================================================
// safetensors loader
// ============================================================
void* torch_std_safetensors_load(const char* path);
int   torch_std_safetensors_count(void* dict);
const char* torch_std_safetensors_name(void* dict, int idx);
void* torch_std_safetensors_tensor(void* dict, int idx);
void  torch_std_safetensors_free(void* dict);
void* torch_std_safetensors_get_tensor_by_name(void* dict, const char* name);
// ============================================================
// Samplers (DDIM / Euler / Euler Ancestral / DPM++ 2M)
// ============================================================
void* torch_std_sample_ddim_from_sigma(void* noise_pred, void* x_t,
                                        void* sigma_t, void* sigma_prev,
                                        double eta);
void* torch_std_sample_ddim(void* noise_pred, void* x_t,
                             void* alpha_bar_t, void* alpha_bar_prev, double eta);
void* torch_std_sample_euler(void* noise_pred, void* x_t,
                              void* sigma_t, void* sigma_prev);
void* torch_std_sample_euler_ancestral(void* noise_pred, void* x_t,
                                        void* sigma_t, void* sigma_prev);
void* torch_std_sample_dpmpp_2m(void* noise_pred, void* x_t,
                                 void* sigma_t, void* sigma_prev,
                                 void* old_denoised, int is_first_step);
void* torch_std_sampler_sigmas(int steps, double sigma_min, double sigma_max,
                                const char* schedule);
// ============================================================
// Image processing
// ============================================================
void* torch_std_image_resize(void* img, int new_h, int new_w, const char* mode);
void* torch_std_image_crop(void* img, int x, int y, int w, int h);
// ============================================================
// LoRA key-to-index matching (for SD1.5 UNet)
// ============================================================
int torch_std_lora_match_to_unet(void* lora_dict, int n_weights,
                                  int64_t* out_indices,
                                  void** out_A, void** out_B,
                                  int max_lora);
// ============================================================
// VAE encode/decode (non-tiled and tiled)
// ============================================================
void* torch_std_vae_encode(void* vae_module, void* image);
void* torch_std_vae_decode(void* vae_module, void* latent);
void* torch_std_vae_encode_tiled(void* vae_module, void* image,
                                  int tile_size, int overlap);
void* torch_std_vae_decode_tiled(void* vae_module, void* latent,
                                  int tile_size, int overlap);
// ============================================================
// CLIP BPE Tokenizer
// ============================================================
void* torch_std_clip_tokenizer_create(const char* vocab_path, const char* merges_path);
void* torch_std_clip_tokenizer_encode(void* tokenizer, const char* text);
void  torch_std_clip_tokenizer_free(void* tokenizer);
// ============================================================
// CLIP Text Encoder forward
// ============================================================
void* torch_std_clip_text_forward(void* clip_module, void* token_ids_tensor,
                                   int cast_to_float16);
// ============================================================
// SDXL UNet forward (named-weight dict-based)
// ============================================================
void* torch_std_sdxl_unet_forward(
    void* weight_dict_ptr,
    void* input_ptr, void* timestep_ptr,
    void* text_emb_ptr, void* pooled_emb_ptr,
    double original_size_h, double original_size_w,
    double crop_top, double crop_left,
    double target_size_h, double target_size_w);
// ============================================================
// SDXL Dual CLIP (run two, concat outputs)
// ============================================================
void* torch_std_sdxl_dual_clip(void* clip1, void* clip2, void* token_ids);
void* torch_std_fm_step(void* velocity, void* x_t, double dt);
// ============================================================
// 规范化层
// ============================================================
void* torch_std_layer_norm(void* input, void* weight, void* bias, double eps);
void* torch_std_rms_norm(void* input, void* weight, double eps);
void* torch_std_group_norm(void* input, void* weight, void* bias, int64_t num_groups, double eps);
// ============================================================
// FLUX MMDiT forward
// ============================================================
void* torch_std_flux_forward(
    void* wdict_ptr, void* img_ptr, void* txt_ptr,
    void* timestep_ptr, void* img_pos_ptr,
    double guidance_scale, int n_blocks,
    int n_heads_img, int n_heads_txt, int head_dim);
void* torch_std_flux_embed_nd(void* ids, int dim, double theta, int64_t* axes_dim, int n_axes);
// ============================================================
// T5 SentencePiece tokenizer
// ============================================================
void* torch_std_t5_tokenizer_create(const char* model_path);
void* torch_std_t5_tokenizer_encode(void* tokenizer, const char* text, int max_len);
void  torch_std_t5_tokenizer_free(void* tokenizer);
// ============================================================
// GGUF model loader + dequantize
// ============================================================
void* torch_std_gguf_load(const char* path);
int   torch_std_gguf_tensor_count(void* model);
const char* torch_std_gguf_tensor_name(void* model, int idx);
void* torch_std_gguf_load_tensor(void* model, int idx);
void* torch_std_gguf_load_tensor_by_name(void* model, const char* name);
void  torch_std_gguf_free(void* model);