build_out/input.ss

;; extern FFI functions
(load-shared-object "libtorch_std_helper.so")
(define torch_std_tensor_from_blob
  (foreign-procedure "torch_std_tensor_from_blob" (void* void* int int) void*))
(define torch_std_zeros
  (foreign-procedure "torch_std_zeros" (void* int int) void*))
(define torch_std_ones
  (foreign-procedure "torch_std_ones" (void* int int) void*))
(define torch_std_empty
  (foreign-procedure "torch_std_empty" (void* int int) void*))
(define torch_std_full
  (foreign-procedure "torch_std_full" (void* int double int) void*))
(define torch_std_clone
  (foreign-procedure "torch_std_clone" (void*) void*))
(define torch_std_to_dtype
  (foreign-procedure "torch_std_to_dtype" (void* int) void*))
(define torch_std_delete_tensor
  (foreign-procedure "torch_std_delete_tensor" (void*) void))
(define torch_std_arange
  (foreign-procedure "torch_std_arange" (int int int int) void*))
(define torch_std_narrow
  (foreign-procedure "torch_std_narrow" (void* int int int) void*))
(define torch_std_size
  (foreign-procedure "torch_std_size" (void* int) int))
(define torch_std_numel
  (foreign-procedure "torch_std_numel" (void*) int))
(define torch_std_ndim
  (foreign-procedure "torch_std_ndim" (void*) int))
(define torch_std_shape
  (foreign-procedure "torch_std_shape" (void* void*) void))
(define torch_std_cuda_is_available
  (foreign-procedure "torch_std_cuda_is_available" () int))
(define torch_std_to_cuda
  (foreign-procedure "torch_std_to_cuda" (void*) void*))
(define torch_std_to_cpu
  (foreign-procedure "torch_std_to_cpu" (void*) void*))
(define torch_std_is_cuda
  (foreign-procedure "torch_std_is_cuda" (void*) int))
(define torch_std_manual_seed
  (foreign-procedure "torch_std_manual_seed" (int) void))
(define torch_std_add
  (foreign-procedure "torch_std_add" (void* void*) void*))
(define torch_std_sub
  (foreign-procedure "torch_std_sub" (void* void*) void*))
(define torch_std_mul
  (foreign-procedure "torch_std_mul" (void* void*) void*))
(define torch_std_div
  (foreign-procedure "torch_std_div" (void* void*) void*))
(define torch_std_pow
  (foreign-procedure "torch_std_pow" (void* double) void*))
(define torch_std_exp
  (foreign-procedure "torch_std_exp" (void*) void*))
(define torch_std_log
  (foreign-procedure "torch_std_log" (void*) void*))
(define torch_std_sqrt
  (foreign-procedure "torch_std_sqrt" (void*) void*))
(define torch_std_neg
  (foreign-procedure "torch_std_neg" (void*) void*))
(define torch_std_abs
  (foreign-procedure "torch_std_abs" (void*) void*))
(define torch_std_cos
  (foreign-procedure "torch_std_cos" (void*) void*))
(define torch_std_sin
  (foreign-procedure "torch_std_sin" (void*) void*))
(define torch_std_relu
  (foreign-procedure "torch_std_relu" (void*) void*))
(define torch_std_leaky_relu
  (foreign-procedure "torch_std_leaky_relu" (void* double) void*))
(define torch_std_sigmoid
  (foreign-procedure "torch_std_sigmoid" (void*) void*))
(define torch_std_tanh
  (foreign-procedure "torch_std_tanh" (void*) void*))
(define torch_std_softmax
  (foreign-procedure "torch_std_softmax" (void* int) void*))
(define torch_std_log_softmax
  (foreign-procedure "torch_std_log_softmax" (void* int) void*))
(define torch_std_sum
  (foreign-procedure "torch_std_sum" (void*) void*))
(define torch_std_sum_dim
  (foreign-procedure "torch_std_sum_dim" (void* int int) void*))
(define torch_std_mean
  (foreign-procedure "torch_std_mean" (void*) void*))
(define torch_std_mean_dim
  (foreign-procedure "torch_std_mean_dim" (void* int int) void*))
(define torch_std_max
  (foreign-procedure "torch_std_max" (void*) void*))
(define torch_std_max_dim
  (foreign-procedure "torch_std_max_dim" (void* int int) void*))
(define torch_std_min
  (foreign-procedure "torch_std_min" (void*) void*))
(define torch_std_min_dim
  (foreign-procedure "torch_std_min_dim" (void* int int) void*))
(define torch_std_argmax
  (foreign-procedure "torch_std_argmax" (void*) int))
(define torch_std_argmax_dim1
  (foreign-procedure "torch_std_argmax_dim1" (void* int) int))
(define torch_std_multinomial
  (foreign-procedure "torch_std_multinomial" (void* int int) void*))
(define torch_std_gather
  (foreign-procedure "torch_std_gather" (void* int void*) void*))
(define torch_std_index_select
  (foreign-procedure "torch_std_index_select" (void* int void*) void*))
(define torch_std_index_tensor
  (foreign-procedure "torch_std_index_tensor" (void* void*) void*))
(define torch_std_reshape
  (foreign-procedure "torch_std_reshape" (void* void* int) void*))
(define torch_std_transpose
  (foreign-procedure "torch_std_transpose" (void* int int) void*))
(define torch_std_permute
  (foreign-procedure "torch_std_permute" (void* void* int) void*))
(define torch_std_squeeze
  (foreign-procedure "torch_std_squeeze" (void* int) void*))
(define torch_std_unsqueeze
  (foreign-procedure "torch_std_unsqueeze" (void* int) void*))
(define torch_std_cat
  (foreign-procedure "torch_std_cat" (void* int int) void*))
(define torch_std_stack
  (foreign-procedure "torch_std_stack" (void* int int) void*))
(define torch_std_slice
  (foreign-procedure "torch_std_slice" (void* int int int int) void*))
(define torch_std_matmul
  (foreign-procedure "torch_std_matmul" (void* void*) void*))
(define torch_std_linear
  (foreign-procedure "torch_std_linear" (void* void* void*) void*))
(define torch_std_attention
  (foreign-procedure "torch_std_attention" (void* void* void* int void* int) void*))
(define torch_std_conv1d
  (foreign-procedure "torch_std_conv1d" (void* void* void* int int int int) void*))
(define torch_std_conv2d
  (foreign-procedure "torch_std_conv2d" (void* void* void* int int int int int int int) void*))
(define torch_std_max_pool2d
  (foreign-procedure "torch_std_max_pool2d" (void* int int int int int int int int) void*))
(define torch_std_avg_pool2d
  (foreign-procedure "torch_std_avg_pool2d" (void* int int int int int int) void*))
(define torch_std_batch_norm2d
  (foreign-procedure "torch_std_batch_norm2d" (void* void* void* void* void* int double double) void*))
(define torch_std_layer_norm
  (foreign-procedure "torch_std_layer_norm" (void* void* void* double) void*))
(define torch_std_rms_norm
  (foreign-procedure "torch_std_rms_norm" (void* void* double) void*))
(define torch_std_group_norm
  (foreign-procedure "torch_std_group_norm" (void* void* void* int double) void*))
(define torch_std_mul_scalar
  (foreign-procedure "torch_std_mul_scalar" (void* double) void*))
(define torch_std_add_scalar
  (foreign-procedure "torch_std_add_scalar" (void* double) void*))
(define torch_std_clip_tokenizer_create
  (foreign-procedure "torch_std_clip_tokenizer_create" (string string) void*))
(define torch_std_clip_tokenizer_encode
  (foreign-procedure "torch_std_clip_tokenizer_encode" (void* string) void*))
(define torch_std_clip_tokenizer_free
  (foreign-procedure "torch_std_clip_tokenizer_free" (void*) void))
(define torch_std_clip_text_forward
  (foreign-procedure "torch_std_clip_text_forward" (void* void* int) void*))
(define torch_std_sdxl_dual_clip
  (foreign-procedure "torch_std_sdxl_dual_clip" (void* void* void*) void*))
(define torch_std_jit_load
  (foreign-procedure "torch_std_jit_load" (string) void*))
(define torch_std_safetensors_load
  (foreign-procedure "torch_std_safetensors_load" (string) void*))
(define torch_std_safetensors_count
  (foreign-procedure "torch_std_safetensors_count" (void*) int))
(define torch_std_safetensors_name
  (foreign-procedure "torch_std_safetensors_name" (void* int) string))
(define torch_std_safetensors_tensor
  (foreign-procedure "torch_std_safetensors_tensor" (void* int) void*))
(define torch_std_safetensors_get_tensor_by_name
  (foreign-procedure "torch_std_safetensors_get_tensor_by_name" (void* string) void*))
(define torch_std_safetensors_free
  (foreign-procedure "torch_std_safetensors_free" (void*) void))
(define torch_std_sd15_unet_forward_dict
  (foreign-procedure "torch_std_sd15_unet_forward_dict" (void* void* void* void* void* void* void* int double) void*))
(define torch_std_sdxl_unet_forward
  (foreign-procedure "torch_std_sdxl_unet_forward" (void* void* void* void* void* double double double double double double) void*))
(define torch_std_vae_encode
  (foreign-procedure "torch_std_vae_encode" (void* void*) void*))
(define torch_std_vae_decode
  (foreign-procedure "torch_std_vae_decode" (void* void*) void*))
(define torch_std_vae_encode_tiled
  (foreign-procedure "torch_std_vae_encode_tiled" (void* void* int int) void*))
(define torch_std_vae_decode_tiled
  (foreign-procedure "torch_std_vae_decode_tiled" (void* void* int int) void*))
(define torch_std_sample_ddim
  (foreign-procedure "torch_std_sample_ddim" (void* void* void* void* double) void*))
(define torch_std_sample_ddim_from_sigma
  (foreign-procedure "torch_std_sample_ddim_from_sigma" (void* void* void* void* double) void*))
(define torch_std_sample_euler
  (foreign-procedure "torch_std_sample_euler" (void* void* void* void*) void*))
(define torch_std_sample_euler_ancestral
  (foreign-procedure "torch_std_sample_euler_ancestral" (void* void* void* void*) void*))
(define torch_std_sample_dpmpp_2m
  (foreign-procedure "torch_std_sample_dpmpp_2m" (void* void* void* void* void* int) void*))
(define torch_std_sampler_sigmas
  (foreign-procedure "torch_std_sampler_sigmas" (int double double string) void*))
(define torch_std_lora_match_to_unet
  (foreign-procedure "torch_std_lora_match_to_unet" (void* int void* void* void* int) int))
(define torch_std_t5_tokenizer_create
  (foreign-procedure "torch_std_t5_tokenizer_create" (string) void*))
(define torch_std_t5_tokenizer_encode
  (foreign-procedure "torch_std_t5_tokenizer_encode" (void* string int) void*))
(define torch_std_t5_tokenizer_free
  (foreign-procedure "torch_std_t5_tokenizer_free" (void*) void))
(define torch_std_flux_forward
  (foreign-procedure "torch_std_flux_forward" (void* void* void* void* void* double int int int int) void*))
(define torch_std_flux_embed_nd
  (foreign-procedure "torch_std_flux_embed_nd" (void* int double void* int) void*))
(define torch_std_fm_step
  (foreign-procedure "torch_std_fm_step" (void* void* double) void*))
(define torch_std_gguf_load
  (foreign-procedure "torch_std_gguf_load" (string) void*))
(define torch_std_gguf_tensor_count
  (foreign-procedure "torch_std_gguf_tensor_count" (void*) int))
(define torch_std_gguf_tensor_name
  (foreign-procedure "torch_std_gguf_tensor_name" (void* int) string))
(define torch_std_gguf_load_tensor
  (foreign-procedure "torch_std_gguf_load_tensor" (void* int) void*))
(define torch_std_gguf_load_tensor_by_name
  (foreign-procedure "torch_std_gguf_load_tensor_by_name" (void* string) void*))
(define torch_std_gguf_free
  (foreign-procedure "torch_std_gguf_free" (void*) void))
(define torch_std_image_resize
  (foreign-procedure "torch_std_image_resize" (void* int int string) void*))
(define torch_std_image_crop
  (foreign-procedure "torch_std_image_crop" (void* int int int int) void*))
(define torch_std_load_image
  (foreign-procedure "torch_std_load_image" (string) void*))
(define torch_std_ddpm_betas
  (foreign-procedure "torch_std_ddpm_betas" (int double double) void*))
(define torch_std_ddpm_add_noise
  (foreign-procedure "torch_std_ddpm_add_noise" (void* void* void* void*) void*))
(define torch_std_to_double_array
  (foreign-procedure "torch_std_to_double_array" (void* void* int) void))
(define torch_std_to_float_array
  (foreign-procedure "torch_std_to_float_array" (void* void* int) void))
(define torch_std_to_int64_array
  (foreign-procedure "torch_std_to_int64_array" (void* void* int) void))
(define torch_std_randint
  (foreign-procedure "torch_std_randint" (int int void* int int) void*))
(define torch_std_tensor_from_blob_3d
  (foreign-procedure "torch_std_tensor_from_blob_3d" (void* int int int int) void*))
(define torch_std_detach
  (foreign-procedure "torch_std_detach" (void*) void*))
(define torch_std_randn
  (foreign-procedure "torch_std_randn" (void* int int) void*))
